# avatar-video-workbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: docs.md  feature_request.md
.github/workflows/: ci.yml
configs/: avatar_project.example.yaml  ltx_i2v.example.yaml  qwen_lora_training.example.yaml
docs/: architecture.md  backend-metadata.md  codex-for-oss.md  comfyui-workflow-skeleton.md  community.md  demo.md  model-assets.md  pipeline.md  pirate-character-flow.md  release-plan.md  roadmap.md  security-and-publication.md  vertex-ltx-i2v.md  vertex-run-reports.md
docs/examples/: ltx-i2v-backend-metadata.json  vertex-run-report.json
integrations/huggingface-space/: README.md  app.py  requirements.txt
schemas/: backend-metadata.schema.json  vertex-run-report.schema.json
scripts/: smoke-demo.sh  synthetic_smoke_demo.sh
src/avatar_video_workbench/: __init__.py  artifacts.py  backend_metadata.py  character_flow.py  cli.py  cloud.py  config.py  datasets.py  experiments.py  publication.py  vertex.py  vertex_reports.py
src/avatar_video_workbench/runners/: __init__.py  ltx_i2v_vertex.py  ltx_lora_train_vertex.py
templates/: vertex_custom_job.yaml
tests/: test_backend_metadata.py  test_character_flow.py  test_cloud_ltx.py  test_dataset_validation.py  test_experiment_compile.py  test_huggingface_space_app.py  test_public_schemas.py  test_publication_scan.py  test_vertex_render.py  test_vertex_reports.py
