[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-video-workbench"
version = "0.1.0"
description = "A clean control plane for reproducible avatar LoRA and image-to-video pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Martinez" }]
keywords = ["avatar", "lora", "video-generation", "vertex-ai", "comfyui", "i2v"]
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
avatar-video-workbench = "avatar_video_workbench.cli:main"
avw = "avatar_video_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

